--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,9 @@
 		<maven.compiler.source>11</maven.compiler.source>
 		<maven.compiler.target>11</maven.compiler.target>
 
-		<spring.version>5.1.9.RELEASE</spring.version>
+		<spring.version>5.2.6.RELEASE</spring.version>
 		<logback.version>1.2.3</logback.version>
+		<slf4j.version>1.7.30</slf4j.version>
 		<lombok.version>1.18.2</lombok.version>
 		<tomcat.version>9.0.35</tomcat.version>
 		<junit.version>4.13</junit.version>
@@ -55,6 +56,16 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-api</artifactId>
+				<version>${slf4j.version}</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 	<build>
 		<finalName>demo</finalName>
